trunk/Archive2/1e/cad4959a23867c/output
main.cpp: In instantiation of 'bah::Pair<T1, T2>::Pair(const T1&, const T2&) [with T1 = int; T2 = foobar]':
main.cpp:60:34:   required from here
main.cpp:29:37: error: use of deleted function 'foobar::foobar(const foobar&)'
             : first( x ), second( y )
                                     ^
main.cpp:7:5: error: declared here
     foobar(const foobar&) = delete;
     ^
